Past tense hike
We did it 🎊

--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 					</div>
 					<div class="project_desc">
 						<h3>Topo Graph</h3>
-						<p>Shawn is climbing Mt Whitney</p>
-						<a class="learn_more" target="_blank" href="/topograph">Track him live here (Aug 11-14)</a>
+						<p>Shawn climbed Mt Whitney</p>
+						<a class="learn_more" target="_blank" href="/topograph">See the archived hike here</a>
 						<br/>
 						<a class="learn_more" target="_blank" href="https://github.com/rssteffey/topograph">Or see the code</a>
 					</div>
