--- a/index.html
+++ b/index.html
@@ -79,23 +79,23 @@
 				<!-- <div class="shawn_pic"></div> -->
 				<div class="about_text">
 					<p>
-						Shawn makes things! <br/>This site exists to document those things.
+						Shawn makes things!
 					</p>
 					<br/>
 					<p>
-						During the day, he makes PHP applications for Vanderbilt Medical Center, with a smattering of Javascript, API design, and various other backend things.
+						During the day, those things are Elixir applications for Carebridge Health.
 					</p>
 					<br/>
 					<p>
-						At night, he builds whatever comes to mind.
+						At night, those things are... varied. <br/>
 						Recent projects include a multiplayer word-based party game, 
 						a slot machine designed with Unity (built from scraps of an old desk), 
-						and even this website.
+						and also this website.
 					</p>
 					<br/>
 					<p>
-						Located just south of Nashville, Shawn lives with his wife, dog, and looming omnipresent digital oversight.
-						(Alexandria, Echo, and Alexa - respectively)
+						Shawn lives south of Nashville with his wife, dog, and Roomba. <br/>
+						(Alexandria, Echo, and Clarence - respectively)
 					</p>
 				</div>
 
