--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<div class="icon-row social">
 					<a href="https://www.linkedin.com/in/rssteffey/" target="new" class="default_color_text_1" alt="LinkedIn"><i class="fa fa-linkedin"></i></a>
 					<a href="https://github.com/rssteffey" target="new" class="default_color_text_2" alt="Github"><i class="fa fa-github"></i></a>
-					<a href="https://www.instagram.com/steffeystudios" target="new" class="default_color_text_3" alt="Instagram"><i class="fa fa-instagram"></i></a>
+					<a href="/instagram/" class="default_color_text_3" alt="Instagram"><i class="fa fa-instagram"></i></a>
 					<a href="https://twitter.com/steffeystudios" target="new" class="default_color_text_4" alt="Twitter"><i class="fa fa-twitter"></i></a>
 					<a href="https://open.spotify.com/user/122880200" target="new" class="default_color_text_5" alt="Spotify"><i class="fa fa-spotify"></i></a>
 				</div>
@@ -238,7 +238,7 @@
 			<div class="icon-row social">
 				<a href="https://www.linkedin.com/in/rssteffey/" target="new" class="default_color_text_1" alt="LinkedIn"><i class="fa fa-linkedin"></i></a>
 				<a href="https://github.com/rssteffey" target="new" class="default_color_text_2" alt="Github"><i class="fa fa-github"></i></a>
-				<a href="https://www.instagram.com/steffeystudios" target="new" class="default_color_text_3" alt="Instagram"><i class="fa fa-instagram"></i></a>
+				<a href="/instagram/" class="default_color_text_3" alt="Instagram"><i class="fa fa-instagram"></i></a>
 				<a href="https://twitter.com/steffeystudios" target="new" class="default_color_text_4" alt="Twitter"><i class="fa fa-twitter"></i></a>
 				<a href="https://open.spotify.com/user/122880200" target="new" class="default_color_text_5" alt="Spotify"><i class="fa fa-spotify"></i></a>
 			</div>
