Add homepage arrow

--- a/instagram/index.html
+++ b/instagram/index.html
@@ -17,6 +17,9 @@
 <body>
     <a class="quicklink" name="top"></a>
     <div class="body_wrapper">
+        <div class="homepage-link">
+            <a href="/.."><i class="fa-solid fa-arrow-left"></i></a>
+        </div>
         <div id="header" class="header">
             <h1>Steffeystudios</h1>
         </div>
