--- a/instagram/index.html
+++ b/instagram/index.html
@@ -17,35 +17,37 @@
 <body>
     <a class="quicklink" name="top"></a>
     <div class="body_wrapper">
-        <div class="homepage-link">
-            <a href="/.."><i class="fa-solid fa-arrow-left"></i></a>
-        </div>
+        <a href="/.." class="homepage-link"><i class="fa-solid fa-arrow-left"></i></a>
+        <a href="#top" class="back-to-top"><i class="fa-solid fa-arrow-up"></i></a>
+
         <div id="header" class="header">
             <h1>Steffeystudios</h1>
+
+             <div class="date-jumper">
+                <a href="#jump-2013">2013</a>
+                <a href="#jump-2014">2014</a>
+                <a href="#jump-2015">2015</a>
+                <a href="#jump-2016">2016</a>
+                <a href="#jump-2017">2017</a>
+                <a href="#jump-2018">2018</a>
+                <a href="#jump-2019">2019</a>
+                <a href="#jump-2020">2020</a>
+                <a href="#jump-2021">2021</a>
+                <a href="#jump-2022">2022</a>
+                <a href="#jump-2023">2023</a>
+                <a href="#jump-2024">2024</a>
+            </div>
+
+            <div class="event-jumper">
+                <a href="#jump-30">30&nbsp;by&nbsp;30</a>
+                <a href="#jump-papaw">Papaw</a>
+                <a href="#jump-italy">Italy</a>
+                <a href="#jump-inktober-2019">Inktober&nbsp;'19</a>
+                <a href="#jump-inktober-2017">Inktober&nbsp;'17</a>
+            </div>
         </div>
 
-        <div class="date-jumper">
-            <a href="#jump-2013">2013</a>
-            <a href="#jump-2014">2014</a>
-            <a href="#jump-2015">2015</a>
-            <a href="#jump-2016">2016</a>
-            <a href="#jump-2017">2017</a>
-            <a href="#jump-2018">2018</a>
-            <a href="#jump-2019">2019</a>
-            <a href="#jump-2020">2020</a>
-            <a href="#jump-2021">2021</a>
-            <a href="#jump-2022">2022</a>
-            <a href="#jump-2023">2023</a>
-            <a href="#jump-2024">2024</a>
-        </div>
-
-        <div class="event-jumper">
-            <a href="#jump-30">30&nbsp;by&nbsp;30</a>
-            <a href="#jump-papaw">Papaw</a>
-            <a href="#jump-italy">Italy</a>
-            <a href="#jump-inktober-2019">Inktober&nbsp;'19</a>
-            <a href="#jump-inktober-2017">Inktober&nbsp;'17</a>
-        </div>
+       
 
         <!-- Begin Generated Grid -->
         <div class="grid-container">
